virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: web-service
  namespace: zee
spec:
  hosts:      
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
      - uri:  
          prefix: /
      route: 
      - destination:
          host: kustomize-zee5poc
          port:
              number: 80
